--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,3 @@
-#construction {
-    background-image: url("Images/background wip.png");
-}
-
-#Auri-Anagram {
-    display: block;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 550px;
-}
-
-#wrench {
-    display: block;
-    margin-top: -20px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50px;
-}
-
-#wip {
-    margin-top: 15px;
-    text-align: center;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-}
-
 /* Custom Breaks */
 
 .br1{
@@ -47,6 +19,12 @@
 
 .body-1{
     background-image: url("Images/background wip.png");
+}
+
+.page-content-1{
+    display: block;
+    width: auto;
+    height: auto;
 }
 
 .mp-pannel-1{
